cmake_minimum_required(VERSION 3.10)
project(Summer2025CS101)

set(CMAKE_CXX_STANDARD 17)

add_executable(p1 problem1.cpp)
add_executable(p2 problem2.cpp)
add_executable(p3 problem3.cpp)
add_executable(p4 problem4.cpp)
add_executable(p5 problem5.cpp)
add_executable(p6 problem6.cpp)
add_executable(p7 problem7.cpp)
add_executable(p8 problem8.cpp)
